fix: legend pane was too wide

--- a/modules/layerInformation/style.less
+++ b/modules/layerInformation/style.less
@@ -32,6 +32,7 @@
     position: absolute;
     top: 20px;
     right: 60px;
+    max-width:600px;
     width: 45vw;
     margin: 60px 10px 30px 10px;
     z-index: 1010;
